...
            app:destination="@id/browseChoiceFragment" />
        <action android:id="@+id/action_home_to_quizChoice"
            app:destination="@id/quizChoiceFragment" />
        <action android:id="@+id/action_home_to_achievements"
            app:destination="@id/achievementsFragment" />
        <action android:id="@+id/action_home_to_duel"
            app:destination="@id/duel_graph" />
    </fragment>

    <fragment
        android:id="@+id/achievementsFragment"
        android:name="com.example.app_mythology.ui.achievements.AchievementsFragment"
        android:label="Succès"
...
        <fragment
            android:id="@+id/duelAnnounceFragment"
            android:name="com.example.app_mythology.ui.duel.DuelAnnounceFragment"
            android:label="Duel"
            tools:layout="@layout/fragment_duel_announce">
            <action android:id="@+id/action_duelAnnounce_to_duelQuestionClassic"
                app:destination="@id/duelQuestionClassicFragment" />
            <action android:id="@+id/action_duelAnnounce_to_duelQuestionQcm"
                app:destination="@id/duelQuestionQcmFragment" />
        </fragment>

        <fragment
            android:id="@+id/duelQuestionClassicFragment"
            android:name="com.example.app_mythology.ui.duel.DuelQuestionClassicFragment"
            android:label="Duel"
            tools:layout="@layout/fragment_duel_question_classic">
            <action android:id="@+id/action_duelQuestionClassic_to_duelRecap"
                app:destination="@id/duelRecapFragment" />
        </fragment>

        <fragment
            android:id="@+id/duelQuestionQcmFragment"
            android:name="com.example.app_mythology.ui.duel.DuelQuestionQcmFragment"
            android:label="Duel"
...
        android:id="@+id/quizEntityQcmChoiceFragment"
        android:name="com.example.app_mythology.ui.quiz.QuizQcmChoiceFragment"
        android:label="Difficulté"
        tools:layout="@layout/fragment_quiz_entity_choice">
        <argument android:name="quizType" app:argType="string" android:defaultValue="entity" />
        <action android:id="@+id/action_qcmChoice_to_qcm"
            app:destination="@id/quiz_entity_qcm_graph" />
    </fragment>

    <navigation android:id="@+id/quiz_entity_qcm_graph"
        app:startDestination="@id/quizEntityQcmFragment">

        <fragment
            android:id="@+id/quizEntityQcmFragment"
            android:name="com.example.app_mythology.ui.quiz.QuizEntityQcmFragment"
            android:label="QCM Entités"
            tools:layout="@layout/fragment_quiz_qcm">
            <argument android:name="level" app:argType="string" android:defaultValue="easy" />
            <action android:id="@+id/action_qcmEntity_to_qcmEntityResult"
                app:destination="@id/quizEntityQcmResultFragment" />
        </fragment>

        <fragment
            android:id="@+id/quizEntityQcmResultFragment"
            android:name="com.example.app_mythology.ui.quiz.QuizEntityQcmResultFragment"
            android:label="Résultat"
...
        android:id="@+id/quizArtifactQcmChoiceFragment"
        android:name="com.example.app_mythology.ui.quiz.QuizQcmChoiceFragment"
        android:label="Difficulté"
        tools:layout="@layout/fragment_quiz_entity_choice">
        <argument android:name="quizType" app:argType="string" android:defaultValue="artifact" />
        <action android:id="@+id/action_qcmChoice_to_qcm"
            app:destination="@id/quiz_artifact_qcm_graph" />
    </fragment>

    <navigation android:id="@+id/quiz_artifact_qcm_graph"
        app:startDestination="@id/quizArtifactQcmFragment">

        <fragment
            android:id="@+id/quizArtifactQcmFragment"
            android:name="com.example.app_mythology.ui.quiz.QuizArtifactQcmFragment"
            android:label="QCM Artéfacts"
            tools:layout="@layout/fragment_quiz_qcm">
            <argument android:name="level" app:argType="string" android:defaultValue="easy" />
            <action android:id="@+id/action_qcmArtifact_to_qcmArtifactResult"
                app:destination="@id/quizArtifactQcmResultFragment" />
        </fragment>

        <fragment
            android:id="@+id/quizArtifactQcmResultFragment"
            android:name="com.example.app_mythology.ui.quiz.QuizArtifactQcmResultFragment"
            android:label="Résultat"
...
    <fragment
        android:id="@+id/quizListChoiceFragment"
        android:name="com.example.app_mythology.ui.quiz.QuizListChoiceFragment"
        android:label="Quiz Liste"
        tools:layout="@layout/fragment_quiz_list_choice">
        <action android:id="@+id/action_quizListChoice_to_quizList"
            app:destination="@id/quizListFragment" />
    </fragment>

    <fragment
        android:id="@+id/quizListFragment"
        android:name="com.example.app_mythology.ui.quiz.QuizListFragment"
        android:label="Quiz Liste"
...
    <fragment
        android:id="@+id/quizEntityChoiceFragment"
        android:name="com.example.app_mythology.ui.quiz.QuizEntityChoiceFragment"
        android:label="Difficulté"
        tools:layout="@layout/fragment_quiz_entity_choice">
        <action android:id="@+id/action_quizEntityChoice_to_quizEntity"
            app:destination="@id/quiz_entity_graph" />
    </fragment>

    <navigation android:id="@+id/quiz_entity_graph"
        app:startDestination="@id/quizEntityFragment">

        <fragment
            android:id="@+id/quizEntityFragment"
            android:name="com.example.app_mythology.ui.quiz.QuizEntityFragment"
            android:label="Quiz Entités"
            tools:layout="@layout/fragment_quiz_entity">
            <argument android:name="level" app:argType="string" android:defaultValue="easy" />
            <action android:id="@+id/action_quizEntity_to_quizEntityResult"
                app:destination="@id/quizEntityResultFragment" />
        </fragment>

        <fragment
            android:id="@+id/quizEntityResultFragment"
            android:name="com.example.app_mythology.ui.quiz.QuizEntityResultFragment"
            android:label="Résultat"
...
    <fragment
        android:id="@+id/quizPlaceChoiceFragment"
        android:name="com.example.app_mythology.ui.quiz.QuizPlaceChoiceFragment"
        android:label="Quiz Lieux"
        tools:layout="@layout/fragment_quiz_place_choice">
        <action android:id="@+id/action_quizPlaceChoice_to_quizYggdrasil"
            app:destination="@id/quizYggdrasilFragment" />
        <action android:id="@+id/action_quizPlaceChoice_to_quizRivers"
            app:destination="@id/quizRiversFragment" />
        <action android:id="@+id/action_quizPlaceChoice_to_quizUnderworld"
            app:destination="@id/quizUnderworldFragment" />
    </fragment>

...
    <fragment
        android:id="@+id/quizArtifactChoiceFragment"
        android:name="com.example.app_mythology.ui.quiz.QuizArtifactChoiceFragment"
        android:label="Difficulté"
        tools:layout="@layout/fragment_quiz_entity_choice">
        <action android:id="@+id/action_quizArtifactChoice_to_quizArtifact"
            app:destination="@id/quiz_artifact_graph" />
    </fragment>

    <navigation android:id="@+id/quiz_artifact_graph"
        app:startDestination="@id/quizArtifactFragment">

        <fragment
            android:id="@+id/quizArtifactFragment"
            android:name="com.example.app_mythology.ui.quiz.QuizArtifactFragment"
            android:label="Quiz Artéfacts"
            tools:layout="@layout/fragment_quiz_entity">
            <argument android:name="level" app:argType="string" android:defaultValue="easy" />
            <action android:id="@+id/action_quizArtifact_to_quizArtifactResult"
                app:destination="@id/quizArtifactResultFragment" />
        </fragment>

        <fragment
            android:id="@+id/quizArtifactResultFragment"
            android:name="com.example.app_mythology.ui.quiz.QuizArtifactResultFragment"
            android:label="Résultat"
...
