...
    android:background="@android:color/transparent">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="Questions" android:textSize="20sp" android:textStyle="bold"
        android:textColor="@color/on_surface" android:layout_marginBottom="48dp"/>

    <ImageButton android:id="@+id/btn_duel_pool_same"
        android:layout_width="wrap_content" android:layout_height="56dp"
        android:adjustViewBounds="true" android:scaleType="fitCenter"
        android:background="@null" android:padding="0dp"
        android:layout_marginBottom="20dp"/>

    <ImageButton android:id="@+id/btn_duel_pool_different"
        android:layout_width="wrap_content" android:layout_height="56dp"
        android:adjustViewBounds="true" android:scaleType="fitCenter"
        android:background="@null" android:padding="0dp"/>

</LinearLayout>

